Miscellaneous cleanup